autotests/syntax-tests/tests/negative/negative111.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = $LABEL Name Name ; = ; } ; 